--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,11 +6,17 @@
 
 // Base
 @import "base/normalize";
+@import "base/reset";
+@import "base/links";
+@import "base/lists";
+@import "base/fonts";
 @import "base/typography";
 
 // Components
 
 // Layouts
+@import "layouts/wrapper";
+@import "layouts/navigation";
 
 // Pages
 @import "pages/index";
