CSS for Hero Mobile

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -9,3 +9,18 @@ body {
 .cart__counter {
   font-size: 1.5rem;
 }
+
+// ===============================
+// Index.html - Hero
+// ===============================
+.hero__content--title {
+  font-weight: 900;
+}
+
+.hero__content--subtitle {
+  font-size: 1.15rem;
+}
+
+.button--hero {
+  font-size: 0.9rem;
+}
