--- a/styles/layouts/_navigation.scss
+++ b/styles/layouts/_navigation.scss
@@ -8,7 +8,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1.5em;
+  gap: 1em;
+  padding: 0 1em;
 }
 
 .navbar__menu--btn {
@@ -23,7 +24,7 @@
 .navbar__logo {
   //   width: 10.625em;
   //   height: 1.125em;
-  width: 12.5em;
+  width: 12em;
   height: 2.5em;
 }
 
