--- a/styles/main.css
+++ b/styles/main.css
@@ -467,6 +467,35 @@ body {
   font-size: 1.5rem;
 }
 
+.hero__content--title {
+  font-weight: 900;
+}
+
+.hero__content--subtitle {
+  font-size: 1.15rem;
+}
+
+.button--hero {
+  font-size: 0.9rem;
+}
+
+.button {
+  background-color: #f6914e;
+  padding: 1.3em 3em;
+  border-radius: 0.3em;
+  -webkit-box-shadow: 0px 5px 10px black;
+          box-shadow: 0px 5px 10px black;
+  -webkit-box-shadow: 4px 33px 62px -13px rgba(0, 0, 0, 0.575);
+          box-shadow: 4px 33px 62px -13px rgba(0, 0, 0, 0.575);
+  color: white;
+}
+
+.button--hero {
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .navigation {
   display: none;
 }
@@ -483,7 +512,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 1.5em;
+  gap: 1em;
+  padding: 0 1em;
 }
 
 .navbar__menu--btn {
@@ -496,7 +526,7 @@ body {
 }
 
 .navbar__logo {
-  width: 12.5em;
+  width: 12em;
   height: 2.5em;
 }
 
@@ -520,5 +550,75 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   color: #443636;
+}
+
+.benefits,
+footer {
+  display: none;
+}
+
+section.hero {
+  background-color: #edd3c1;
+  min-height: 80vh;
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  gap: 2em;
+  margin: -1em 0;
+  z-index: -1;
+}
+
+.hero__img {
+  display: none;
+}
+
+.hero__img--mobile {
+  width: 80%;
+  max-height: 75%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hero__content {
+  z-index: 1;
+  bottom: 0;
+  text-align: center;
+  padding: 1em 3em;
+}
+
+.hero__content--title,
+.hero__content--subtitle {
+  margin: 0;
+}
+
+.hero__content--subtitle {
+  margin: 1.5em 0;
+  color: #a59684;
+}
+
+@media only screen and (min-width: 900px) {
+  .hero__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 75%;
+       object-position: 75%;
+    top: 0;
+  }
 }
 /*# sourceMappingURL=main.css.map */
