--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,4 +1,3 @@
-.benefits,
 footer {
   display: none;
 }
@@ -62,4 +61,17 @@ section.hero {
     object-position: 75%;
     top: 0;
   }
+}
+
+// ========================
+// Benefits Section
+// ========================
+
+section.benefits {
+  background-color: $beige-light;
+  padding-top: 5em;
+}
+
+.benefits__top {
+  //   background-color: red;
 }
