CSS for Benefits and Cards for Mobile

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -18,6 +18,9 @@ $green: #3c562c;
 // Reviews
 $gray: #f6f0ef;
 
+// Cards
+$white: #ffffff;
+
 // ========================
 // Breakpoints
 // ========================
