--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,7 @@
 // Components
 @import "components/buttons";
 @import "components/waves";
+@import "components/cards";
 
 // Layouts
 @import "layouts/wrapper";
