--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,6 +20,7 @@
 // Layouts
 @import "layouts/wrapper";
 @import "layouts/navigation";
+@import "layouts/footer";
 
 // Pages
 @import "pages/index";
