--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $beige-dark: #faead8;
 // Typography
 $brown: #443636;
 $brown-light: #a59684;
+$clr-legal: #79886b;
 
 // Buttons and accents
 $orange: #f6914e;
