Making it responsive - sm media

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -25,3 +25,8 @@ $white: #ffffff;
 // ========================
 // Breakpoints
 // ========================
+$xs-width: 480px;
+$sm-width: 700px;
+$md-width: 900px;
+$lg-width: 1200px;
+$xl-width: 1400px;
