Making it responsive - md media

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -59,3 +59,13 @@ body {
     font-size: 0.9rem;
   }
 }
+
+@include media-md {
+  .footer__top--shop-text {
+    font-size: 2rem;
+  }
+
+  .footer__legal--list {
+    font-size: 1rem;
+  }
+}
