--- a/styles/components/_cards.scss
+++ b/styles/components/_cards.scss
@@ -40,11 +40,25 @@
   }
 
   .card__img {
+    // width: 17em;
+    // height: 26em;
     object-position: 40% -2em;
   }
 
   .card__description {
     box-sizing: content-box;
     padding: 1em 0;
+  }
+}
+
+@include media-lg {
+  .card {
+    max-width: 20em;
+    height: 30em;
+  }
+
+  .card__img {
+    width: 20em;
+    height: 30em;
   }
 }
