--- a/styles/layouts/_navigation.scss
+++ b/styles/layouts/_navigation.scss
@@ -53,6 +53,10 @@
     display: none;
   }
 
+  .navbar {
+    padding: 0 3em;
+  }
+
   .navigation {
     display: flex;
     justify-content: space-between;
