CSS Satisfaction for Mobile

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -6,6 +6,7 @@
 $beige: #edd3c1;
 $beige-light: #fcf4ef;
 $beige-dark: #faead8;
+$clr-satisfaction-bg: #fbf4ee;
 
 // Typography
 $brown: #443636;
@@ -21,6 +22,7 @@ $gray: #f6f0ef;
 
 // Cards
 $white: #ffffff;
+$clr-satisfaction: #fefaf8;
 
 // ========================
 // Breakpoints
