--- a/styles/main.css
+++ b/styles/main.css
@@ -1145,4 +1145,80 @@ section.satisfaction {
 .list-item__name {
   margin-bottom: 0.5em;
 }
+
+@media only screen and (min-width: 900px) {
+  .satisfaction__wrapper {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    height: 50em;
+  }
+  .satisfaction__img {
+    display: block;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .satisfaction__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .satisfaction__container {
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  section.satisfaction {
+    height: 60em;
+  }
+  .satisfaction__wrapper {
+    height: 100%;
+  }
+  .satisfaction__list {
+    width: 90%;
+  }
+  .satisfaction__content {
+    width: 80%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  section.satisfaction {
+    height: 70em;
+  }
+  .satisfaction__wrapper {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  .satisfaction__list {
+    max-width: 30em;
+  }
+  .satisfaction__content {
+    max-width: 35em;
+  }
+}
 /*# sourceMappingURL=main.css.map */
