Making Satisfaction responsive - md xl media

--- a/styles/main.css
+++ b/styles/main.css
@@ -1147,6 +1147,9 @@ section.satisfaction {
 }
 
 @media only screen and (min-width: 900px) {
+  section.satisfaction {
+    padding: 0;
+  }
   .satisfaction__wrapper {
     position: relative;
     display: -webkit-box;
