Making Hero Content responsive - md lg media

--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -69,6 +69,13 @@ section.hero {
   }
 }
 
+@include media-lg {
+  .hero__content {
+    max-width: 40em;
+    margin-left: 5%;
+  }
+}
+
 // ========================
 // Benefits Section
 // ========================
