--- a/styles/main.css
+++ b/styles/main.css
@@ -1005,6 +1005,13 @@ section.hero {
   }
 }
 
+@media only screen and (min-width: 1200px) {
+  .hero__content {
+    max-width: 40em;
+    margin-left: 5%;
+  }
+}
+
 section.benefits {
   background-color: #fcf4ef;
   padding: 4em 1em;
