--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -14,6 +14,15 @@
   margin: 0 auto;
 }
 
+.button--learn {
+  width: 80%;
+  border-radius: 0.7em;
+  box-shadow: none;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.17rem;
+}
+
 @include media-md {
   .button--hero {
     max-width: 15em;
