--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,7 +1,3 @@
-// body {
-//   background-color: $beige;
-// }
-
 // ========================
 // HERO Section
 // ========================
@@ -264,4 +260,42 @@ section.satisfaction {
   .satisfaction__content {
     max-width: 35em;
   }
+}
+
+// ========================
+// Benefits Section
+// ========================
+section.learn {
+  background-color: $beige-dark;
+  height: 90vh;
+  padding: 2em 0;
+  display: flex;
+  align-items: center;
+}
+
+.learn__container {
+  margin: 1em 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
+.learn__img {
+  width: 100%;
+}
+
+.learn__content > * {
+  margin: 0;
+}
+
+.learn__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.learn__desc {
+  padding: 0.7em 1em;
+  text-align: center;
 }
