--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -5,6 +5,7 @@
 // Theme
 $beige: #edd3c1;
 $beige-light: #fcf4ef;
+$beige-lighter: #fefaf8;
 $beige-dark: #faead8;
 $clr-satisfaction-bg: #fbf4ee;
 
